12/12-05/12_05_Svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-frontend
spec:
  selector:
    app: nginx
  ports:
  - name: frontend-port
    protocol: TCP
    port: 80
    targetPort: nginx-http

---
apiVersion: v1
kind: Service
metadata:
  name: svc-backend
spec:
  selector:
    app: multitool
  ports:
  - name: backend-port
    protocol: TCP
    port: 80
    targetPort: multi-http
