12/12-05/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuber-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
             name: svc-frontend
             port:
               number: 80
        - pathType: Prefix
          path: /api
          backend:
            service:
             name: svc-backend
             port:
               number: 80
